--- a/style.css
+++ b/style.css
@@ -1,13 +1,49 @@
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 html {
-	font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-	font-size: 1.6rem;
+    font-size: 1.6rem;
+}
+
+.container {
+    display: grid;
+    gap: 2rem 1rem;
+    grid-template-areas:
+        'logo main-menu main-menu'
+        'content-area content-area sidebar'
+        'sponsors sponsors sponsors'
+        'footer footer footer';
+    grid-template-columns: 2fr 6fr 4fr;
+    min-height: 100vh;
+}
+
+.logo {
+    grid-area: logo;
+}
+
+.main-menu {
+    grid-area: main-menu;
+}
+
+.content-area {
+    grid-area: content-area;
+}
+
+.sidebar {
+    grid-area: sidebar;
+}
+
+.sponsors {
+    grid-area: sponsors;
+}
+
+.footer {
+    grid-area: footer;
 }
