--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol';
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -10,6 +15,7 @@ html {
 
 body {
     font-size: 1.6rem;
+    font-family: var(--system-ui);
 }
 
 .container {
