--- a/style.css
+++ b/style.css
@@ -73,10 +73,74 @@ body {
     padding: 1.6rem;
 }
 
-.sponsors {
+.sponsors-wrapper {
     grid-area: sponsors;
+}
+
+.sponsors {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 1.6rem;
+}
+
+.sponsor {
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border-radius: 1.2rem;
+    display: inline-flex;
+    place-self: center;
 }
 
 .footer {
     grid-area: footer;
+}
+
+@media all and (max-width: 992px) {
+    .container {
+        margin: 0 1.6rem;
+    }
+
+    .sponsors {
+        grid-column-gap: 0.8rem;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .container {
+        grid-template-areas:
+            'logo main-menu main-menu'
+            'content-area content-area content-area'
+            'sidebar sidebar sidebar'
+            'sponsors sponsors sponsors'
+            'footer footer footer';
+    }
+
+    body {
+        font-size: 1.4rempx;
+    }
+    .sponsors {
+        grid-template-columns: 1fr;
+        grid-column-gap: 0;
+        grid-row-gap: 1rem;
+    }
+}
+
+@media all and (max-width: 540px) {
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+            'logo'
+            'main-menu'
+            'content-area'
+            'sidebar'
+            'sponsors'
+            'footer';
+        grid-gap: 2rem 0;
+    }
+    .main-menu {
+        justify-self: start;
+    }
 }
